Kubernetes/Grafana/grafana-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: tamer
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
  selector:
    app.kubernetes.io/name: grafana

##
