Kubernetes/Grafana/grafana-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress-tamer
  namespace: tamer
spec:
  ingressClassName: nginx
  rules:
  - host: tamer-grafana.atech-bot.click
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
